--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,6 +8,8 @@ pipelines:
             - npm install
             - npm install gulp-cli -g
             - gulp build
+            - filenames=`ls ./*.*`
+            - for file in $filenames do echo $file done
             - curl -X POST --user "${BB_AUTH_STRING}" "https://api.bitbucket.org/2.0/repositories/${BITBUCKET_REPO_OWNER}/${BITBUCKET_REPO_SLUG}/downloads" --form files=@"dist/*.*"
    branches:
       release:
