--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -7,10 +7,8 @@ pipelines:
          script:
             - npm install
             - npm install gulp-cli -g
-            - gulp build
-            - filenames=`ls ./*.*`
-            - for file in $filenames do echo $file done
-            - curl -X POST --user "${BB_AUTH_STRING}" "https://api.bitbucket.org/2.0/repositories/${BITBUCKET_REPO_OWNER}/${BITBUCKET_REPO_SLUG}/downloads" --form files=@"dist/*.*"
+            - curl -X POST --user "${BB_AUTH_STRING}" "https://api.bitbucket.org/2.0/repositories/${BITBUCKET_REPO_OWNER}/${BITBUCKET_REPO_SLUG}/downloads" --form files=@"dist/infinity-scroll.css"
+            - curl -X POST --user "${BB_AUTH_STRING}" "https://api.bitbucket.org/2.0/repositories/${BITBUCKET_REPO_OWNER}/${BITBUCKET_REPO_SLUG}/downloads" --form files=@"dist/infinity-scroll.js"
    branches:
       release:
          - step:
