--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -7,11 +7,11 @@ pipelines:
          script:
             - apt-get update
             - apt-get -qq install git-ftp
-            - git ftp init --user $SFTP_1AND1_USER --passwd $SFTP_1AND1_PWD ftp://$SFTP_1AND1_HOST:22
+            - git ftp init --user $SFTP_1AND1_USER --passwd $SFTP_1AND1_PWD sftp://$SFTP_1AND1_HOST:22
             - npm install
             - npm install gulp-cli -g
             - gulp build
-            - git ftp push --user $SFTP_1AND1_USER --passwd $SFTP_1AND1_PWD ftp://$SFTP_1AND1_HOST:22 --all
+            - git ftp push --user $SFTP_1AND1_USER --passwd $SFTP_1AND1_PWD sftp://$SFTP_1AND1_HOST:22 --all
             - curl -X POST --user "${BB_AUTH_STRING}" "https://api.bitbucket.org/2.0/repositories/${BITBUCKET_REPO_OWNER}/${BITBUCKET_REPO_SLUG}/downloads" --form files=@"dist/infinity-scroll.css"
             - curl -X POST --user "${BB_AUTH_STRING}" "https://api.bitbucket.org/2.0/repositories/${BITBUCKET_REPO_OWNER}/${BITBUCKET_REPO_SLUG}/downloads" --form files=@"dist/infinity-scroll.js"
    branches:
