--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
   - "6"
 before_script:
-  - apt-get update
   - apt-get -qq install git-ftp
   - npm install -g gulp-cli
-script: gulp
+script: 
+  - gulp
