--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
-sudo: true
 language: node_js
 node_js:
   - "6"
 before_script:
-  - apt-get -qq install git-ftp
   - npm install -g gulp-cli
 script: 
   - gulp
+  - git-ftp
