--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,5 @@ before_script:
 script: 
   - gulp
   - webpack
+after_success:
+    "curl --ftp-create-dirs -T public_html/*.* -u $SFTP_1AND1_USER:$SFTP_1AND1_PWD ftp://$SFTP_1AND1_HOST/test"
