--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,7 @@ before_script:
 script: 
   - gulp
   - webpack
+  - ls
+  - ls public_html/
 after_script:
-    "find /public_html/ -exec curl --ftp-create-dirs -T {} -u $SFTP_1AND1_USER:$SFTP_1AND1_PWD sftp://$SFTP_1AND1_HOST/test"
+    "find public_html/ -exec curl --ftp-create-dirs -T {} -u $SFTP_1AND1_USER:$SFTP_1AND1_PWD sftp://$SFTP_1AND1_HOST/test"
