--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,4 @@ script:
   - ls
   - ls public_html/
 after_script:
-  - lftp sftp://$SFTP_1AND1_HOST -e "cd ng-infinity-scroll; mrm *; bye"
-  
+  - lftp sftp://$SFTP_1AND1_HOST -u $SFTP_1AND1_USER,$SFTP_1AND1_PWD -e "cd ng-infinity-scroll; mrm *; bye"
