--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,13 @@ script:
   - webpack
   - ls
   - ls public_html/
-after_script:
-  - lftp sftp://$SFTP_1AND1_HOST -u $SFTP_1AND1_USER,$SFTP_1AND1_PWD -e "cd ng-infinity-scroll; mrm *; bye"
-  - lftp sftp://$SFTP_1AND1_HOST -u $SFTP_1AND1_USER,$SFTP_1AND1_PWD -e "cd public_html; put *; bye"
+deploy:
+  - provider: script
+    script:
+      - lftp sftp://$SFTP_1AND1_HOST -u $SFTP_1AND1_USER,$SFTP_1AND1_PWD -e "cd ng-infinity-scroll; mrm *; bye"
+      - lftp sftp://$SFTP_1AND1_HOST -u $SFTP_1AND1_USER,$SFTP_1AND1_PWD -e "cd public_html; put *; bye"
+    all_branches: true
+  - provider: script
+    script:
+      - echo RELEASE
+    on: release
