--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,8 @@ after_success:
   - lftp sftp://$SFTP_1AND1_HOST -u $SFTP_1AND1_USER,$SFTP_1AND1_PWD -e "cd ng-infinity-scroll; mrm *; bye"
   - lftp sftp://$SFTP_1AND1_HOST -u $SFTP_1AND1_USER,$SFTP_1AND1_PWD -e "cd public_html; put *; bye"
 deploy:
-  - provider: script
-    script:
-      - echo RELEASE
-    on: release
+  provider: npm
+  email: "francois.achache@gmail.com"
+  api_key: "$NPM_TOKEN"
+  on:
+    tags: true
