--- a/.travis.yml
+++ b/.travis.yml
@@ -11,14 +11,24 @@ before_script:
 script: 
   - gulp
   - webpack
-  - ls
-  - ls public_html/
-after_success:
-  - lftp sftp://$SFTP_1AND1_HOST -u $SFTP_1AND1_USER,$SFTP_1AND1_PWD -e "cd ng-infinity-scroll; mrm *; bye"
-  - lftp sftp://$SFTP_1AND1_HOST -u $SFTP_1AND1_USER,$SFTP_1AND1_PWD -e "cd public_html; put *; bye"
+deploy:
+  provider: script
+  script:
+    - lftp sftp://$SFTP_1AND1_HOST -u $SFTP_1AND1_USER,$SFTP_1AND1_PWD -e "cd ng-infinity-scroll; mrm *; bye"
+    - lftp sftp://$SFTP_1AND1_HOST -u $SFTP_1AND1_USER,$SFTP_1AND1_PWD -e "cd public_html; put *; bye"
+  skip_cleanup: true
+deploy:
+  provider: script
+  script:
+    - git config user.email "francois.achache@gmail.com"
+    - git config user.name "hhfrancois"
+    - npm version patch
+    - git push origin --tags
+  on: jkl
+  skip_cleanup: true
 deploy:
   provider: npm
   email: "francois.achache@gmail.com"
   api_key: "$NPM_TOKEN"
-  on:
-    tags: true
+  on: jkl
+  skip_cleanup: true
