--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,17 @@
 {
-  "name": "ocelot-core",
-  "version": "2.10.3",
-  "main": "path/to/main.css",
+  "name": "ng-infinity-scroll",
+  "description": "Infinite scrolling for ng-repeat",
+  "author": "Achache francois",
+  "license": "ISC",
+  "main": [
+    "src/infinityscroll.js",
+    "src/infinityscroll.css"
+  ],
+  "keywords": [
+    "angular",
+    "infinity scroll",
+    "table"
+  ],
   "ignore": [
     ".jshintrc",
     "**/*.txt",
@@ -10,16 +20,9 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.5",
-    "bootstrap": "~3.3",
-    "fontawesome": "~4.6.3",
-    "jquery": "2.2.0",
-    "angular-bootstrap": "1.1.0",
-    "angular-ui-codemirror": "0.3.0",
-    "angular-chart.js": "^0.10.2",
-    "angular-ui-router": "ui-router#^0.3.0",
-    "animate.css": "^3.5.2",
-    "highlightjs": "^9.4.0",
-    "angular-highlightjs": "^0.6.1"
+    "angular": "^1.6.3",
+    "lodash": "4.17.4",
+    "jquery": "^3.3.1",
+    "bootstrap": "^3.3.7"
   }
 }
