--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.12",
   "author": "Achache francois",
   "license": "ISC",
-  "main": "dist/infinityscroll.js",
+  "main": [
+    "dist/infinityscroll.js",
+    "dist/infinityscroll.css"
+  ],
   "keywords": [
     "angular",
     "infinity scroll",
@@ -11,7 +14,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://bitbucket.org/hhfrancois/ng-infinity-scroll"
+    "url": "https://github.com/hhdevelopment/ng-infinity-scroll"
   },
   "dependencies": {
     "angular": "^1.6.3",
@@ -20,6 +23,7 @@
     "bootstrap": "^3.3.7"
   },
   "devDependencies": {
+    "bower": "^1.8.2",
     "angular-templatecache-loader": "^0.2.0",
     "css-loader": "^0.28.2",
     "del": "~1.2.0",
