--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,18 @@ script:
   - gulp
   - webpack
 deploy:
+  - provider: npm
+    email: "francois.achache@gmail.com"
+    api_key: "$NPM_TOKEN"
+    skip_cleanup: true
+    on: master
   - provider: script
     script:
       - bower register ng-infinity-scroll https://github.com/hhdevelopment/ng-infinity-scroll.git
     skip_cleanup: true
+    on: master
   - provider: script
     script:
       - lftp sftp://$SFTP_1AND1_HOST -u $SFTP_1AND1_USER,$SFTP_1AND1_PWD -e "lcd public_html; cd ng-infinity-scroll; mrm *; mput *; bye"
     skip_cleanup: true
+    on: master
