--- a/.travis.yml
+++ b/.travis.yml
@@ -12,19 +12,32 @@ before_script:
 script: 
   - gulp
   - webpack
+before_deploy:
+   - npm version patch
 deploy:
   - provider: npm
     email: "francois.achache@gmail.com"
     api_key: "$NPM_TOKEN"
     skip_cleanup: true
-    on: master
+    on: 
+      branch: master
   - provider: script
     script:
       - bower register ng-infinity-scroll https://github.com/hhdevelopment/ng-infinity-scroll.git
     skip_cleanup: true
-    on: master
+    on: 
+      branch: master
   - provider: script
     script:
       - lftp sftp://$SFTP_1AND1_HOST -u $SFTP_1AND1_USER,$SFTP_1AND1_PWD -e "lcd public_html; cd ng-infinity-scroll; mrm *; mput *; bye"
     skip_cleanup: true
-    on: master
+    on: 
+      branch: master
+  - provider: script
+    script:
+      - git config user.email "francois.achache@gmail.com"
+      - git config user.name "hhfrancois"
+      - npm version patch
+      - git push origin --tags
+    skip_cleanup: true
+    on: jkl
