--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,11 @@ script:
   - gulp
   - webpack
 before_deploy:
-   - npm version patch
+  - git config user.email "francois.achache@gmail.com"
+  - git config user.name "hhfrancois"
+  - npm version patch
+  - git commit -m [ci skip] package.json 
+  - git push origin --tags
 deploy:
   - provider: npm
     email: "francois.achache@gmail.com"
@@ -23,13 +27,13 @@ deploy:
       branch: master
   - provider: script
     script:
-      - bower register ng-infinity-scroll https://github.com/hhdevelopment/ng-infinity-scroll.git
+      - lftp sftp://$SFTP_1AND1_HOST -u $SFTP_1AND1_USER,$SFTP_1AND1_PWD -e "lcd public_html; cd ng-infinity-scroll; mrm *; mput *; bye"
     skip_cleanup: true
     on: 
       branch: master
   - provider: script
     script:
-      - lftp sftp://$SFTP_1AND1_HOST -u $SFTP_1AND1_USER,$SFTP_1AND1_PWD -e "lcd public_html; cd ng-infinity-scroll; mrm *; mput *; bye"
+      - bower register ng-infinity-scroll https://github.com/hhdevelopment/ng-infinity-scroll.git
     skip_cleanup: true
     on: 
       branch: master
