--- a/.travis.yml
+++ b/.travis.yml
@@ -15,15 +15,20 @@ script:
 before_deploy:
   - git config user.email "francois.achache@gmail.com"
   - git config user.name "hhfrancois"
-  - npm version patch
-  - git commit -m"[ci skip]" package.json 
-  - git push origin --tags
+  - npm version patch -m "[ci skip]"
 deploy:
   - provider: npm
     email: "francois.achache@gmail.com"
     api_key: "$NPM_TOKEN"
     skip_cleanup: true
     on: 
+      branch: master
+  - provider: releases
+    user: "GITHUB USER"
+    password: "GITHUB PASSWORD"
+    file: "package.json"
+    skip_cleanup: true
+    on:
       branch: master
   - provider: script
     script:
@@ -37,11 +42,3 @@ deploy:
     skip_cleanup: true
     on: 
       branch: master
-  - provider: script
-    script:
-      - git config user.email "francois.achache@gmail.com"
-      - git config user.name "hhfrancois"
-      - npm version patch
-      - git push origin --tags
-    skip_cleanup: true
-    on: jkl
