--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,8 @@ deploy:
     on: 
       branch: master
   - provider: releases
-    user: "GITHUB USER"
-    password: "GITHUB PWD"
+    user: "GITHUB_USER"
+    password: "GITHUB_PWD"
     file: "package.json"
     skip_cleanup: true
     on:
