--- a/.travis.yml
+++ b/.travis.yml
@@ -9,12 +9,13 @@ before_install:
 before_script:
   - npm install -g gulp-cli
   - npm install -g bower
-  - git config user.email "francois.achache@gmail.com"
-  - git config user.name "hhfrancois"
   - npm version patch -m "[ci skip]"
 script: 
   - gulp
   - webpack
+before_deploy:
+  - git config user.email "francois.achache@gmail.com"
+  - git config user.name "hhfrancois"
 deploy:
   - provider: releases
     user: "francois.achache@gmail.com"
