--- a/.travis.yml
+++ b/.travis.yml
@@ -7,18 +7,21 @@ cache:
 before_install:
   - sudo apt-get install lftp
 before_script:
+  - git config user.email "$GITHUB_MAIL"
+  - git config user.name "$GITHUB_USER"
   - npm install -g gulp-cli
   - npm install -g bower
-  - npm version patch -m "[ci skip]"
-  - git status
 script: 
   - gulp
   - webpack
-before_deploy:
-  - git config user.email "$GITHUB_MAIL"
-  - git config user.name "$GITHUB_USER"
-  - git status
 deploy:
+  - provider: script
+    script:
+      - npm version patch -m "[ci skip]"
+      - git status
+    skip_cleanup: true
+    on: 
+      branch: master
   - provider: releases
     user: "$GITHUB_USER"
     api_key: "$GITHUB_TOKEN"
