--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ node_js:
 cache:
   directories:
     - "node_modules"
+branches:
+  only:
+  - master
 before_install:
   - sudo apt-get install lftp
 before_script:
@@ -12,18 +15,14 @@ before_script:
   - npm install -g gulp-cli
   - npm install -g bower
 script: 
+  - echo "Gulp"
   - gulp
+  - echo "Webpack"
   - webpack
+  - echo "Update package version"
+  - npm version patch -m "[ci skip]"
+  - git status
 deploy:
-  - provider: script
-    script:
-      - git status
-      - echo "Update package version"
-      - npm version patch -m "[ci skip]"
-      - git status
-    skip_cleanup: true
-    on: 
-      branch: master
   - provider: releases
     user: "$GITHUB_USER"
     api_key: "$GITHUB_TOKEN"
