--- a/.travis.yml
+++ b/.travis.yml
@@ -12,14 +12,12 @@ before_install:
 before_script:
   - git config user.email "$GITHUB_MAIL"
   - git config user.name "$GITHUB_USER"
+  - git config user.password "$GITHUB_PWD"
   - npm install -g gulp-cli
 script: 
   - gulp
   - webpack
 deploy:
-  - provider: script
-    script: git status
-    skip_cleanup: true
   - provider: script
     script: git checkout master
     skip_cleanup: true
@@ -31,16 +29,10 @@ deploy:
     on:
       branch: master
   - provider: script
-    script: git status
-    skip_cleanup: true
-  - provider: script
-    script: git push
+    script: git push https://$GITHUB_TOKEN:x-oauth-basic@github.com/hhdevelopment/ng-infinity-scroll
     skip_cleanup: true
     on:
       branch: master
-  - provider: script
-    script: git status
-    skip_cleanup: true
   - provider: releases
     user: "$GITHUB_USER"
     api_key: "$GITHUB_TOKEN"
