[ci skip] disabled bower register

--- a/.travis.yml
+++ b/.travis.yml
@@ -55,4 +55,4 @@ deploy:
     script: bower register ng-infinity-scroll https://github.com/hhdevelopment/ng-infinity-scroll.git
     skip_cleanup: true
     on: 
-      branch: master
+      branch: register_bower
